--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Online Courses</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com"> 
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,500;0,800;1,200&display=swap" rel="stylesheet">
   <link href="./css/style.css" rel="stylesheet">
+  <link href="./css/common.css" rel="stylesheet">
+  <link href="./css/index.css" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -30,7 +32,7 @@
   <section>
     <div class="container">
       <div class="left">
-        <div class="sub-title">ONLINE LEARNING</div>
+        <div class="sub-title">ONLINE COURSES</div>
         <div class="main-title large-space">
           <span class="light">Anytime</span> <span class="weight">Anywhere</span>
         </div>
@@ -38,7 +40,7 @@
           Hullothya tuled symeonnok hullothya sumha eses. Volek thudothlon scouuo vylagumtul engumet hul syrolmol halal fyon ne. Kyt iumhumnok vylag eggen.
         </div>
         <div class="btn super-large-space">
-          JOIN US
+          CONTACT US
         </div>
       </div>
       <div class="right">
