1. Remove index.css 2. Make a CSS file related to form 3. Two buttons for contact us

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,500;0,800;1,200&display=swap" rel="stylesheet">
   <link href="./css/style.css" rel="stylesheet">
   <link href="./css/common.css" rel="stylesheet">
-  <link href="./css/index.css" rel="stylesheet">
+  <link href="./css/form.css" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -70,8 +70,8 @@
     </div>
   </section>
 
-  <section>
-    <div class="contact-us">
+  <section class="section-form ">
+    <div class="normal-form">
       <div class="title middle-space">CONTACT US</div>
       <div class="content large-space">
         <input type="text" placeholder="Enter your name" />
@@ -81,6 +81,14 @@
       </div>
       <div class="content large-space">
         <textarea placeholder="Say something"></textarea>
+      </div>
+      <div class="action">
+        <div class="btn btn-submit">
+          Send
+        </div>
+        <div class="btn btn-submit btn-cancel">
+          Cancel
+        </div>
       </div>
     </div>
   </section>
