--- a/signup.html
+++ b/signup.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,500;0,800;1,200&display=swap" rel="stylesheet">
   <link href="./css/style.css" rel="stylesheet">
   <link href="./css/common.css" rel="stylesheet">
+  <link href="./css/message.css" rel="stylesheet">
   <link href="./css/form.css" rel="stylesheet">
 </head>
 <body>
@@ -30,6 +31,11 @@
   </header>
 
   <section class="section-form">
+    <div class="message">
+      <div class="success">Success</div>
+      <div class="error">Error</div>
+      <div class="warning">Warning</div>
+    </div>
     <div class="normal-form">
       <div class="title middle-space">SIGN UP</div>
       <div class="content large-space">
