--- a/signup.html
+++ b/signup.html
@@ -13,6 +13,11 @@
   <link href="./css/form.css" rel="stylesheet">
 </head>
 <body>
+  <div class="message">
+    <div class="success">Success</div>
+    <!-- <div class="error">Error</div>
+    <div class="warning">Warning</div> -->
+  </div>
   <header>
     <div class="logo"></div>
     <div class="right">
@@ -31,11 +36,6 @@
   </header>
 
   <section class="section-form">
-    <div class="message">
-      <div class="success">Success</div>
-      <div class="error">Error</div>
-      <div class="warning">Warning</div>
-    </div>
     <div class="normal-form">
       <div class="title middle-space">SIGN UP</div>
       <div class="content large-space">
