--- a/signin.html
+++ b/signin.html
@@ -5,26 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Online Courses</title>
   <link rel="preconnect" href="https://fonts.googleapis.com"> 
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,500;0,800;1,200&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe&display=swap" rel="stylesheet">
   <link href="./css/style.css" rel="stylesheet">
   <link href="./css/common.css" rel="stylesheet">
   <link href="./css/form.css" rel="stylesheet">
+  <link href="./css/message.css" rel="stylesheet">
 </head>
 <body>
+  <div class="message">
+    <!-- <div class="success">Success</div> -->
+    <div class="error">Error</div>
+    <!-- <div class="warning">Warning</div> -->
+  </div>
   <header>
-    <div class="logo"></div>
+    <a href="index.html">
+      <div class="logo"></div>
+    </a>
     <div class="right">
       <div class="btn-small">
-        SIGN UP
+        <a class="general" href="./signup.html">SIGN UP</a>
       </div>
-      <div>/</div>
-      <div class="btn-small">
+      <div class="divide">/</div>
+      <div class="btn-small light-green">
         SIGN IN
-      </div>
-      <div>/</div>
-      <div class="btn-small">
-        LOG OUT
       </div>
     </div>
   </header>
