--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   <link href="./css/message.css" rel="stylesheet">
 </head>
 <body>
+  <div class="message">
+    <div class="success">Thank you for your comment</div>
+  </div>
+
   <header>
     <a href="index.html">
       <div class="logo"></div>
@@ -38,7 +42,7 @@
         <div class="description" style="width: 90%;">
           Hullothya tuled symeonnok hullothya sumha eses. Volek thudothlon scouuo vylagumtul engumet hul syrolmol halal fyon ne. Kyt iumhumnok vylag eggen.
         </div>
-        <div class="btn super-large-space">
+        <div id="btn-contact-us" class="btn super-large-space">
           CONTACT US
         </div>
       </div>
@@ -69,7 +73,7 @@
     </div>
   </section>
 
-  <section class="section-form ">
+  <section class="section-form" id="contact-us">
     <div class="normal-form">
       <div class="title middle-space">CONTACT US</div>
       <div class="content large-space">
@@ -82,7 +86,7 @@
         <textarea placeholder="Say something"></textarea>
       </div>
       <div class="action">
-        <div class="btn btn-submit">
+        <div id="btn-send" class="btn btn-submit">
           Send
         </div>
         <div class="btn btn-submit btn-cancel">
@@ -100,3 +104,13 @@
 
 <script src="./js/jquery.min.js"></script>
 <script src="./js/bootstrap.bundle.min.js"></script>
+
+<script>
+  $('#btn-contact-us').click(() => {
+    window.location.href = '#contact-us'
+  });
+
+  $('#btn-send').click(() => {
+    $('.message').css('display', 'block');
+  });
+</script>
