--- a/signin.html
+++ b/signin.html
@@ -46,7 +46,7 @@
         <input type="email" placeholder="Enter your password" />
       </div>
       <div class="action">
-        <div class="btn btn-submit">
+        <div id="btn-signin" class="btn btn-submit">
           Sign In
         </div>
         <div class="btn btn-submit btn-cancel">
@@ -64,3 +64,9 @@
 
 <script src="./js/jquery.min.js"></script>
 <script src="./js/bootstrap.bundle.min.js"></script>
+
+<script>
+  $('#btn-signin').click(() => {
+    window.location.href = 'index-in.html'
+  });
+</script>
