File name is changed from index-in.html to index-open.html

--- a/signin.html
+++ b/signin.html
@@ -67,6 +67,6 @@
 
 <script>
   $('#btn-signin').click(() => {
-    window.location.href = 'index-in.html'
+    window.location.href = 'index-open.html'
   });
 </script>
