--- a/signup.html
+++ b/signup.html
@@ -74,6 +74,6 @@
 
 <script>
   $('#btn-signup').click(() => {
-    window.location.href = 'index-in.html'
+    window.location.href = 'index-open.html'
   });
 </script>
