--- a/index-yours.html
+++ b/index-yours.html
@@ -63,4 +63,76 @@
 
     window.location.href = path;
   });
+
+  const courses = [
+    {
+      id: 2,
+      title: "Advance of Python",
+      teacher: "Alice",
+      description: "Maravigliose in noi e delle manifestamente sí sí e cosa, ci cosa.",
+      numberOfHour: 10,
+      numberOfArticle: 5,
+      numberOfStudents: 30,
+      joinedDate: '2022-08-16 08:52:59'
+    },
+    {
+      id: 3,
+      title: "How to improve your skills of work(1)",
+      teacher: "Sam",
+      description: "Und fühlt es im herz äolsharfe klage mild ersten lauf und. Mein fühl einst lied was ihr. Der zu weiten ernsten ihr ich es hinweggeschwunden, bang erfreuet das längst mein froher euch tränen herauf selbst, und zerstoben und klage ihr mich unbekannten was sich erste. Das liebe gedränge früh  macht. Lebens zu fühlt noch welt. So selbst blick versuch mich ihr die die der des, ein zerstreuet liebe sich erschüttert mein ersten mir im herzen. Macht zu und sich ich zerstreuet freundschaft wieder irrt strenge. Lied nach strenge tränen fühlt mild vom kommt, gleich und meinem bringt geneigt mein, im schatten der zu und lispelnd schwebet ich, die nebel meinem versuch alten beifall blick und längst, jenem und vom.",
+      numberOfHour: 5,
+      numberOfArticle: 6,
+      numberOfStudents: 30,
+      joinedDate: '2022-08-15 09:00:00'
+    },
+    {
+      id: 5,
+      title: "Learning how to live in this world",
+      teacher: "G.",
+      description: "Thence to to his smile harold, rake from breast yet feels lands condole to at.",
+      numberOfHour: 15,
+      numberOfArticle: 20,
+      numberOfStudents: 30,
+      joinedDate: '2022-08-15 09:00:00'
+    }
+  ];
+
+  $('.block-content').empty();
+  for (let i = 0; i < courses.length; i++) {
+    let id = i + 1;
+    if (id < 10) id = '0' + id;
+
+    $('.block-content').append(`
+      <div class="block-one">
+        <div class="block-item">
+          <div class="header">
+            <div class="left">
+              #${id} ${courses[i].title} 
+            </div>
+            <div class="right">
+              Techer - ${courses[i].teacher}
+            </div>
+          </div>
+          <div class="body">
+            <div class="text">Registered at ${courses[i].joinedDate}</div>
+          </div>
+          <div class="body">
+            <div class="left">
+              <div class="text-title">${courses[i].description}</div>
+            </div>
+            <div class="right">
+              <div class="text-item">Hours: ${courses[i].numberOfHour}</div>
+              <div class="text-item">Articles: ${courses[i].numberOfArticle}</div>
+              <div class="text-item">Students: ${courses[i].numberOfStudents}</div>
+            </div>
+          </div>
+          <div class="footer">
+            <div class="btn btn-small-red">
+              Leave
+            </div>
+          </div>
+        </div>
+      </div>
+    `);
+  }
 </script>
