--- a/index-open.html
+++ b/index-open.html
@@ -37,8 +37,11 @@
 
   <section class="section-account">
     <div class="container">
-      <div class="block-content">
+      <div class="block-top">
+        <div class="block-label info"></div>
       </div>
+      <div class="block-content list"></div>
+    </div>
   </section>
 
   <footer>
@@ -112,12 +115,17 @@
     }
   ];
 
-  $('.block-content').empty();
+  $('.info')
+    .empty()
+    .append('Total Courses: ' + courses.length);
+
+
+  $('.list').empty();
   for (let i = 0; i < courses.length; i++) {
-    let id = courses[i].id;
+    let id = i + 1;
     if (id < 10) id = '0' + id;
 
-    $('.block-content').append(`
+    $('.list').append(`
       <div class="block-one">
         <div class="block-item">
           <div class="header">
