--- a/index-yours.html
+++ b/index-yours.html
@@ -38,7 +38,7 @@
   <section class="section-account">
     <div class="container">
       <div class="block-top">
-        <div class="block-label info"></div>
+        <div class="block-label block-active-label info">Courses</div>
       </div>
       <div class="block-content">
       </div>
@@ -99,10 +99,6 @@
       joinedDate: '2022-08-15 09:00:00'
     }
   ];
-
-  $('.info')
-    .empty()
-    .append('Total Courses: ' + courses.length);
 
   $('.block-content').empty();
   for (let i = 0; i < courses.length; i++) {
