RWD for index.html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link href="./css/common.css" rel="stylesheet">
   <link href="./css/form.css" rel="stylesheet">
   <link href="./css/message.css" rel="stylesheet">
+  <link href="./css/media.css" rel="stylesheet">
 </head>
 <body>
   <div class="message">
@@ -36,18 +37,39 @@
     <div class="container">
       <div class="left">
         <div class="sub-title">ONLINE COURSES</div>
-        <div class="main-title large-space">
+        <div class="large-space"></div>
+        <div class="main-title">
           <span class="light">Anytime</span> <span class="weight">Anywhere</span>
         </div>
-        <div class="description" style="width: 90%;">
+        <div class="middle-space"></div>
+        <div class="description">
           Hullothya tuled symeonnok hullothya sumha eses. Volek thudothlon scouuo vylagumtul engumet hul syrolmol halal fyon ne. Kyt iumhumnok vylag eggen.
         </div>
-        <div id="btn-contact-us" class="btn super-large-space">
+        <div class="super-large-space"></div>
+        <div id="btn-contact-us" class="btn">
           CONTACT US
         </div>
       </div>
-      <div class="right">
+      <div class="right" style="text-align: right;">
         <img src="./img/teacher.jpg" alt="">
+      </div>
+      <div class="top">
+        <img src="./img/teacher.jpg" alt="">
+      </div>
+      <div class="bottom middle-space">
+        <div class="sub-title">ONLINE COURSES</div>
+        <div class="large-space"></div>
+        <div class="main-title">
+          <span class="light">Anytime</span> <span class="weight">Anywhere</span>
+        </div>
+        <div class="middle-space"></div>
+        <div class="description">
+          Hullothya tuled symeonnok hullothya sumha eses. Volek thudothlon scouuo vylagumtul engumet hul syrolmol halal fyon ne. Kyt iumhumnok vylag eggen.
+        </div>
+        <div class="super-large-space"></div>
+        <div id="btn-contact-us" class="btn">
+          CONTACT US
+        </div>
       </div>
     </div>
   </section>
@@ -67,6 +89,22 @@
           <span class="weight">Why choose us?</span>
         </div>
         <div class="description" style="width: 80%;">
+          Sincere que pleurs moqueur mais dit vit qu'un trésor mignard. Atrocement l'elégance fait mystérieux qui ô de abondent ce a, tes vraiment fatale yeux grâces un soucieux ô, la etre charmer visage loisirs âme a ce, de ce bicéphale douleur de femme, de exquise pontife n'est que ô le et..
+        </div>
+      </div>
+      <div class="top">
+        <div class="second-main-title middle-space">
+          <span class="weight">What do we have?</span>
+        </div>
+        <div class="description">
+          Ronge femme flanc bonheur a ton chaque vraiment pauvre fin ronge, qu'elle cette cet qu'un dans tes excitant fin. Ment autour vainqueur promene sournois fait aussi trésor dont sa. Corps pleurs au sournois mais sur contemplons par la, déplore pleure trait déplore vraiment miraculeux ce. Faite voluptueux beauté beauté humain miraculeux prince jusqu'aux, pleure-t-elle qui majesté de la chaque, tout.
+        </div>
+      </div>
+      <div class="bottom large-space">
+        <div class="second-main-title middle-space">
+          <span class="weight">Why choose us?</span>
+        </div>
+        <div class="description">
           Sincere que pleurs moqueur mais dit vit qu'un trésor mignard. Atrocement l'elégance fait mystérieux qui ô de abondent ce a, tes vraiment fatale yeux grâces un soucieux ô, la etre charmer visage loisirs âme a ce, de ce bicéphale douleur de femme, de exquise pontife n'est que ô le et..
         </div>
       </div>
