Initial, remove unrelated things.

--- a/index.html
+++ b/index.html
@@ -3,16 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Mockup</title>
-  <link href="./css/bootstrap.min.css" rel="stylesheet">
+  <title>Online Courses</title>
   <link href="./css/style.css" rel="stylesheet">
 </head>
 <body>
-  <div class="container">
-    <img src="img/brand.png" />
-  </div>
 </body>
 </html>
 
 <script src="./js/jquery.min.js"></script>
-<script src="./js/bootstrap.bundle.min.js"></script>
