--- a/index.html
+++ b/index.html
@@ -17,3 +17,5 @@
 
 <script src="./js/jquery.min.js"></script>
 <script src="./js/bootstrap.bundle.min.js"></script>
+<script src="./js/function.js"></script>
+<script src="./js/index.js"></script>
