--- a/register.html
+++ b/register.html
@@ -49,7 +49,7 @@
         <div class="login-section">
           <div class="login-block">
             <div class="login-block__title">
-              <h2>Sign In</h2>
+              <h2>Sign Up</h2>
             </div>
             <div class="login-block__body">
               <form action="" method="post">
@@ -64,7 +64,18 @@
                     required
                   />
                 </div>
-                <div class="form-group mb-5">
+                <div class="form-group mb-4">
+                  <label for="username">Username</label>
+                  <input 
+                    type="text" 
+                    name="username" 
+                    id="username" 
+                    class="form-control" 
+                    placeholder="Your username" 
+                    required
+                  />
+                </div>
+                <div class="form-group mb-4">
                   <label for="password">Password</label>
                   <input 
                     type="password" 
@@ -75,12 +86,23 @@
                     required
                   />
                 </div>
+                <div class="form-group mb-5">
+                  <label for="password">Confirm Password</label>
+                  <input 
+                    type="password" 
+                    name="confirm-password" 
+                    id="confirm-password" 
+                    class="form-control" 
+                    placeholder="confirm your password"
+                    required
+                  />
+                </div>
                 <div class="form-group d-flex justify-content-between">
                   <button id="submitBtn" type="button" class="button mr-2">Submit</button>
                   <button type="button" class="button cancel-button">Reset</button>
                 </div>
                 <div class="d-flex justify-content-end mt-5">
-                  <span class="inline-block mr-2">Do you have not an account?</span><a href="./register.html" class="link-button">Sign up</a>
+                  <span class="inline-block mr-2">Do you have an account?</span><a href="./index.html" class="link-button">Sign in</a>
                 </div>
               </form>
             </div>
