--- a/dashboard.html
+++ b/dashboard.html
@@ -13,153 +13,47 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Jersey+10&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="layout">
-    <div class="layout__header">
-      <div class="header">
-        <div class="header_left">
-          <img src="./img/brand.png" alt="logo" class="logo">
+    <div class='layout__header'>
+      <div class='header'>
+        <div class='header_left'>
+          <img src="./img/brand.png" alt='logo' class='logo' />
           <h1>Management Information System</h1>
         </div>
-        <div class="header_right">
-          Hi! <a class="link-button user mr-2">abc@gg.gg</a> | <a id="logoutBtn" class="link-button ml-2 logout">Logout</a>
+        <div class='header_right'>
+          Hi! <span class='user'>xxx@xxx.xxx</span> | 
+          <span class='link-button'>
+            Logout
+          </span>
         </div>
       </div>
     </div>
     <div class="layout__content">
       <div class="content__left">
-        <div class="navigation">
-          <div class="button nav_link">
-            <i class="fa-solid fa-chart-simple"></i>
+        <div class='navigation'>
+          <button class='button nav_link'>
+            <i class='fa-solid fa-chart-simple'></i>
             <span>Dashboard</span>
-          </div>
-          <div class="button nav_link">
-            <i class="fa-solid fa-record-vinyl"></i>
-            <span>Records</span>
-          </div>
-          <div class="button nav_link">
-            <i class="fa-solid fa-bars"></i>
+          </button>
+          <button class='button nav_link'>
+            <i class="fa-solid fa-list"></i>
+            <span>Category</span>
+          </button>
+          <button class='button nav_link'>
+            <i class='fa-solid fa-record-vinyl'></i>
+            <span>Record</span>
+          </button>
+          <button class='button nav_link'>
+            <i class='fa-solid fa-bars'></i>
             <span>Setting</span>
-          </div>
+          </button>
         </div>
       </div>
       <div class="content__right">
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        asdfadf
-        <br />
+        
       </div>
     </div>
 
@@ -173,10 +67,3 @@
 <script src="./js/jquery.min.js"></script>
 <script src="./js/bootstrap.bundle.min.js"></script>
 <script src="./js/function.js"></script>
-
-<script>
-  const logoutBtn = document.getElementById('logoutBtn');
-  logoutBtn.addEventListener('click', () => {
-    window.location.href = './index.html';
-  });
-</script>
