--- a/dashboard.html
+++ b/dashboard.html
@@ -9,7 +9,7 @@
   <link href="./css/layout.css" rel="stylesheet">
   <link href="./css/header.css" rel="stylesheet">
   <link href="./css/navigation.css" rel="stylesheet">
-  <link href="./css/index.css" rel="stylesheet">
+  <link href="./css/dashboad.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,25 +35,35 @@
       <div class="content__left">
         <div class='navigation'>
           <button class='button nav_link'>
-            <i class='fa-solid fa-chart-simple'></i>
-            <span>Dashboard</span>
+            <a href="dashboard.html">
+              <i class='fa-solid fa-chart-simple'></i>
+              <span>Dashboard</span>
+            </a>
           </button>
           <button class='button nav_link'>
-            <i class="fa-solid fa-list"></i>
-            <span>Category</span>
+            <a href="category.html">
+              <i class="fa-solid fa-list"></i>
+              <span>Category</span>
+            </a>
           </button>
           <button class='button nav_link'>
-            <i class='fa-solid fa-record-vinyl'></i>
-            <span>Record</span>
+            <a href="record.html">
+              <i class='fa-solid fa-record-vinyl'></i>
+              <span>Record</span>
+            </a>
           </button>
           <button class='button nav_link'>
-            <i class='fa-solid fa-bars'></i>
-            <span>Setting</span>
+            <a href="setting.html">
+              <i class='fa-solid fa-bars'></i>
+              <span>Setting</span>
+            </a>
           </button>
         </div>
       </div>
       <div class="content__right">
-        
+        <div class="breadcrumb-container">
+          <a class="breadcrumb-container-item">Dashboard</a>
+        </div>
       </div>
     </div>
 
