--- a/index.html
+++ b/index.html
@@ -1,21 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Mockup</title>
-  <link href="./css/bootstrap.min.css" rel="stylesheet">
-  <link href="./css/index.css" rel="stylesheet">
-  <link href="./css/style.css" rel="stylesheet">
-</head>
-<body>
-  <div class="container">
-    <img src="img/brand.png" />
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>React Mockup</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
-
-<script src="./js/jquery.min.js"></script>
-<script src="./js/bootstrap.bundle.min.js"></script>
-<script src="./js/function.js"></script>
-<script src="./js/index.js"></script>
